--- a/Readme
+++ b/Readme
@@ -5,6 +5,9 @@ Test 2. Given: The user has already seen the APOD page once AND the phone is not
 Expanation : Old image shows, if app opens same date if new day comes new image will download and old image replace with new image.
 Test 3. Given: The user has not seen the APOD page today AND the phone is not connected to the internet When: The user arrives at the APOD page Then: The page should display an error "We are not connected to the internet, showing you the last image we have." AND The page should display the image of Astronomy Picture of the Day along with the title and explanation, that was last seen by the user
 Expanation : No image exits at the intial launch if no Internet present. only error popup. else error shows with old image.
+
+##(48; ApodModel.swift) let date = Date().string(format: "ddMMyyyy")//To test Acceptance Criteria 3: Change date here manually ; let date = 08042021
+
 Test 4. Given: The NASA APOD API is up (working) AND the phone is connected to the internet When: The APOD image loads fully on the screen Then: The user should be able to see the complete image without distortion or clipping
 *need to kill app and reopen as app does not check rechability on notification.
 
